[tool.poetry]
name = "bear-exporter"
version = "0.1.0"
description = "Export Bear notes to Markdown"
authors = ["Cade Ekblad-Frank <cade@e-f.me>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
records = {git = "https://github.com/weirdo-watch/records.git"}
python-slugify = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-datadir = "^1.3.1"
faker = "^4.1.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
